# advent-of-code-2022

./: README.md  go.mod  pyproject.toml
aoc/: get_data.py
aoc/go/d01/: main.go
aoc/python/: d01.py  d02.py  get_data.py
