[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["moorej <moorej@objectcomputing.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
